Prevent navigation buttons from jumping around when content is being loaded

--- a/web/css/preview.css
+++ b/web/css/preview.css
@@ -12,8 +12,11 @@
 }
 
 .nav-buttons {
+    position: fixed;
+    bottom: 70px;
+    right: 40px;
     padding-top: 10px;
-    float: right;
+    /*float: right;*/
 }
 
 .entry-text {
